segfault when passing NULL to zend_list_delete

related with Bug #79757